tests/errors/E028.zen
void main(argc: void) {
    // E028: Cannot declare a parameter of type void
}